restructured project for support of a second version with a nnue evaluation function